KAAV-592 Border bottom to graph image at own project table when graphs are visible, line height fix for h1, show pino number at table, was accidentally hidden when added to key value for table

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -13,7 +13,7 @@ h1 {
   font-family: 'Helsinki Grotesk Bold', sans-serif;
   font-size: 64px !important;
   letter-spacing: 0;
-  line-height: 36px !important;
+  line-height: 64px !important;
   margin: 0 !important;
   font-weight: 400 !important;
 }
